@@ -1,3 +1,7 @@
+2002-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* irc.man: Added doctools manpage.
+
 2002-02-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* irc.tcl: Frink run.
