@@ -1,3 +1,7 @@
+2002-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* Makefile.in (MODULES): Added irc module.
+
 2002-04-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* mime: Fixed bug #533025.
